--- a/bench/pom.xml
+++ b/bench/pom.xml
@@ -37,7 +37,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
   </parent>
 
     <groupId>org.crustee</groupId>
-    <artifactId>jmh</artifactId>
+    <artifactId>bench</artifactId>
     <version>1.10.1</version>
     <packaging>jar</packaging>
 
