--- a/crustee/pom.xml
+++ b/crustee/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.curstee</groupId>
-    <artifactId>raft</artifactId>
+    <artifactId>crustee</artifactId>
     <version>0.1-SNAPSHOT</version>
 
     <dependencies>
