--- a/bench/pom.xml
+++ b/bench/pom.xml
@@ -32,7 +32,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
     <modelVersion>4.0.0</modelVersion>
     <parent>
     <artifactId>parent</artifactId>
-    <groupId>org.curstee</groupId>
+    <groupId>org.crustee</groupId>
     <version>0.1-SNAPSHOT</version>
   </parent>
 
