--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     </properties>
 
     <build>
+        <defaultGoal>clean verify</defaultGoal>
         <pluginManagement>
             <plugins>
                 <plugin>
