--- a/crustee/pom.xml
+++ b/crustee/pom.xml
@@ -72,6 +72,16 @@
             <artifactId>hppc</artifactId>
             <version>0.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.5.4</version>
+        </dependency>
     </dependencies>
 
 </project>
