--- a/crustee/pom.xml
+++ b/crustee/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.4</version>
+            <version>1.16.6</version>
             <scope>compile</scope>
         </dependency>
 
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.hdrhistogram</groupId>
             <artifactId>HdrHistogram</artifactId>
-            <version>2.1.5</version>
+            <version>2.1.6</version>
         </dependency>
         <dependency>
             <groupId>com.lmax</groupId>
@@ -65,7 +65,7 @@
         <dependency>
             <groupId>uk.co.real-logic</groupId>
             <artifactId>Agrona</artifactId>
-            <version>0.4.1</version>
+            <version>0.4.3</version>
         </dependency>
         <dependency>
             <groupId>com.carrotsearch</groupId>
@@ -80,7 +80,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>2.5.4</version>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.1</version>
         </dependency>
     </dependencies>
 
