--- a/crustee/pom.xml
+++ b/crustee/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>net.openhft</groupId>
+            <artifactId>zero-allocation-hashing</artifactId>
+            <version>0.3</version>
+        </dependency>
     </dependencies>
 
 </project>
