--- a/bench/pom.xml
+++ b/bench/pom.xml
@@ -64,6 +64,11 @@ THE POSSIBILITY OF SUCH DAMAGE.
             <version>${jmh.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.crustee</groupId>
+            <artifactId>crustee</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
     </dependencies>
 
     <properties>
